adding pictures activing paymentTest css files

--- a/paymentTest.html
+++ b/paymentTest.html
@@ -38,8 +38,8 @@
     <link rel="apple-touch-icon" href="/images/apple-touch-icon-iphone-60x60.png" sizes="60x60">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon-iphone-retina-120x120.png" sizes="114x114">
     <link rel="apple-touch-icon" href="/images/apple-touch-icon-ipad-retina-152x152.png" sizes="144x144">
-    <link rel="stylesheet" href="styles/vendor.d4415718.css">
-    <link rel="stylesheet" href="styles/main.fe218946.css"> <!-- Google Analytics -->
+    <link rel="stylesheet" href="./ChattingCat/css/vendor.d4415718.css">
+    <link rel="stylesheet" href="./ChattingCat/css/main.fe218946.css"> <!-- Google Analytics -->
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script type="text/javascript" async="" src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js"></script>
     <script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-55QTQ4"></script>
@@ -649,9 +649,9 @@
         </div>
     </ui-view>
 </div>
-<!--[if lt IE 9]>
+<!--[if lt IE 9]>-->
 <script src="./ChattingCat/js/ie_shim.6c797ceb.js"></script>
-<![endif]-->
+<![endif]&ndash;&gt;
 <script src="./ChattingCat/js/vendor.144a7724.js"></script>
 <script src="./ChattingCat/js/scripts.78ddddd0.js"></script>
 <script src="./ChattingCat/js/.stripe.com/checkout.js" async=""></script>
